# cc-g2pnp

./: .gitignore  CLAUDE.md  README.md  benchmark_pnp_labeler.py  pyproject.toml
cc_g2pnp/: __init__.py  _patch_pyopenjtalk.py  cli.py
cc_g2pnp/data/: __init__.py  collator.py  dataset.py  lmdb_cache.py  pnp_labeler.py  tokenizer.py  vocabulary.py
cc_g2pnp/evaluation/: __init__.py  eval_data.py  metrics.py  pipeline.py
cc_g2pnp/inference/: __init__.py  latency.py  streaming.py
cc_g2pnp/model/: __init__.py  attention.py  cc_g2pnp.py  config.py  conformer_block.py  convolution.py  (+6 more)
docs/: CC-G2PnP_モデル評価・検証レポート.md  CC-G2PnP_実装ロードマップ.md  CC-G2PnP_技術調査.md  CC-G2PnP_論文まとめ.md  CC-G2PnP_論文再現性調査.md  FlashAttention_導入調査.md  最適化調査レポート.md
scripts/: bench_sdpa.py  download_text.py  evaluate.py  measure_sdpa_memory.py  preprocess_pnp.py  profile_pyopenjtalk.py  profile_training.py  train.py  verify_ddp.py  verify_sdpa_numerical.py
tests/: conftest.py  test_attention.py  test_collator.py  test_conformer_block.py  test_convolution.py  test_ctc_decoder.py  test_data_loading.py  test_dataset.py  test_ddp_multiprocess.py  test_embedding.py  test_encoder.py  test_evaluation_eval_data.py  test_evaluation_metrics.py  test_evaluation_pipeline.py  test_feed_forward.py  test_g2p.py  test_inference_latency.py  test_inference_streaming.py  test_lmdb_cache.py  test_local_dataset.py  test_metrics.py  test_model.py  test_pipeline.py  test_pnp_labeler.py  test_positional_encoding.py  test_preprocess_pnp.py  test_sorted_batching.py  test_streaming.py  test_tokenizer.py  test_training_checkpoint.py  test_training_config.py  test_training_distributed.py  test_training_evaluator.py  test_training_integration.py  test_training_logger.py  test_training_optimizer.py  test_training_trainer.py  test_triton_attention.py  test_vocabulary.py
(+8 files in other folders)
