[project]
name = "cc-g2pnp"
version = "0.1.0"
description = "Reimplementation of CC-G2PnP: Streaming G2PnP with Conformer-CTC"
requires-python = ">=3.13"
dependencies = [
    "datasets>=2.14.0,<4.0.0",
    "fugashi>=1.5.0",
    "jiwer>=3.0.0",
    "numpy>=2.4.2",
    "pyopenjtalk-plus>=0.4.1",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "tqdm>=4.67.3",
    "transformers>=4.35.0",
    "unidic>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cc_g2pnp"]

# ── ruff ─────────────────────────────────────────
[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["cc_g2pnp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── pytest ───────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: marks tests requiring network access",
]

# ── PyTorch CUDA 12.8 index ─────────────────────
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchaudio = [{ index = "pytorch-cu128" }]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]
